Adding GetCurrentAveragePrice and change UTC time to Local time
